# LearnPlanr

./: .gitignore  Dockerfile  README.md  launch.sh  manage.py  pyproject.toml
learn_planr/: .gitignore  Dockerfile  db.sqlite3  launch.sh  pyproject.toml
learn_planr/learn_planr/: asgi.py  settings.py  urls.py  wsgi.py
learn_planr/todo/: admin.py  forms.py  models.py  urls.py  views.py
learn_planr/todo/migrations/: 0001_initial.py  0002_rename_user_id_schedule_author_and_more.py  0003_rename_schedule_id_task_schedule_task_completed.py  0004_alter_task_data_finish_alter_task_data_start.py  0005_chapter.py  0006_remove_task_completed.py  0007_chapter_next_button_enabled.py  0008_task_completed.py
learn_planr/todo/templates/registration/: login.html  sign_up.html
learn_planr/todo/templates/todo/: base.html  main.html  page.html  todo_confirm_delete.html  todos.html
scripts/: launch.sh
