[tool.poetry]
name = "learnplanr"
version = "0.9.0"
description = ""
authors = ["BAkhtiyar <cena61454@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
django = "^4.2.4"
openai = "^0.27.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
