[tool.poetry]
name = "learnplanr"
version = "0.1.0"
description = ""
authors = ["BAkhtiyar <cena61454@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
openai = "^0.27.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
