[tool.poetry]
name = "learnplanr"
version = "0.1.0"
description = ""
authors = ["BAkhtiyar <cena61454@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^3.2"
openai = "^0.27.10"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
